# memmap2-rs

./: CHANGELOG.md  Cargo.toml  README.md  clippy.toml
.github/workflows/: main.yml
examples/: cat.rs
src/: advice.rs  lib.rs  stub.rs  unix.rs  windows.rs
tests/: async.rs
