[package]
name = "memmap2"
version = "0.9.4"
authors = [
    "Dan Burkert <dan@danburkert.com>",
    "Yevhenii Reizner <razrfalcon@gmail.com>",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/RazrFalcon/memmap2-rs"
documentation = "https://docs.rs/memmap2"
description = "Cross-platform Rust API for memory-mapped file IO"
keywords = ["mmap", "memory-map", "io", "file"]
edition = "2018"

[dependencies]
stable_deref_trait = { version = "1.0", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2.151"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3"
owning_ref = "0.4.1"
