[package]
name = "memmap2"
version = "0.9.5"
authors = ["Dan Burkert <dan@danburkert.com>", "Yevhenii Reizner <razrfalcon@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/RazrFalcon/memmap2-rs"
documentation = "https://docs.rs/memmap2"
description = "Cross-platform Rust API for memory-mapped file IO"
keywords = ["mmap", "memory-map", "io", "file"]
edition = "2018"

[dependencies]
stable_deref_trait = { version = "1.0", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2.151"

[dev-dependencies]
tempfile = "3"
owning_ref = "0.4.1"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
# pedantic
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
explicit_deref_methods = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
needless_pass_by_value = "allow"
use_self = "allow"
# potentially deny later
map_unwrap_or = "allow"
doc_markdown = "allow"